--- a/src/containers/yulun/index.scss
+++ b/src/containers/yulun/index.scss
@@ -32,3 +32,9 @@
         padding-right: 0.8rem;
     }
 }
+.pingceNum{
+    margin-bottom: 0.3ren;
+    padding-left: 0.2rem;
+    font-size: 0.24rem;
+    color: #ccc;
+}
